# Codex-Account-Manager

./: -L  .gitignore  .gitmodules  .tmp_final_sweep.ps1  .tmp_find_fade.ps1  .tmp_find_table_classes.ps1  .tmp_head_main.ps1  .tmp_view_dev_script.ps1  .tmp_view_fade_blocks.ps1  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.json  issues.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: windows-ci.yml
Formula/: codex-account-manager.rb
codex_account_manager/: __init__.py  autoswitch_sim.py  cli.py  contracts.py  native_notifications.py  services.py
codex_account_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codex_account_manager/web/: app.js  index.html  styles.css  sw.js
docs/: README.md  agent-rules.md  architecture.md  cli-reference.md  config-and-storage.md  development.md  release-notes.md  troubleshooting.md  ui-api.md
electron/: .gitignore  electron-41.3.0.tgz  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
electron/assets/: codex-account-manager.icns
electron/scripts/: dev.js  smoke.js
electron/src/: api-client.js  backend.js  desktop-state-cache.js  export-download.js  icons.js  main.js  menu.js  notifications.js  preload.js  runtime.js  tray.js  update-manager.js  usage-thresholds.js  usage.js  (+1 more)
scripts/: remove-all-required-for-installation-test.ps1  remove-all-required-for-installation-test.sh
tests/: test_autoswitch_sim.py  test_cli_core.py
(+64 files in other folders)
